# Molten

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  easy_table.toml  toml_1.toml  toml_1.txt  toml_2.toml  toml_single.toml
.criterion/parser/base/: estimates.json  sample.json  tukey.json
benches/: parser_benchmark.rs
examples/: _cargo.toml  cargo-add.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse.rs
src/: api.rs  comment.rs  container.rs  errors.rs  index.rs  items.rs  lib.rs  parser.rs  tomlchar.rs  tomldoc.rs  value.rs
src/TOMLElements/: comment.rs  key.rs  keyvalue.rs  mod.rs  strings.rs  table.rs  value.rs
tests/: api.rs  array_hard.toml  arrays.toml  comments.toml  floats.toml  full.toml  indexing.rs  inline_tables.toml  integers.toml  parser.rs  quoted_keys.toml  reconstruction.rs  reproduction.rs  string.toml  strings.toml  whitespace.toml
tests/api/: newline_before_append.toml  newline_before_append_reference.toml
tests/indexing/: Aot_simple.toml  broken_up_AoT.toml  simple.toml  skip_trivia.toml
tests/reconstruction/: AoTs.toml  indented.toml  simple.toml  whitespace.toml
tests/reproduction/: AoT_simple.toml  AoTs.toml  broken_up_AoT.toml  floats.toml  full.toml  inline_tables.toml  integers.toml  kv_sep.toml  res.toml  tables.toml
