[package]
name = "Molten"
version = "0.1.0"
authors = ["LeopoldArkham <leopold.arkham@gmail.com>"]
readme = "README.md"
repository = "https://github.com/LeopoldArkham/Molten"
homepage = "https://github.com/LeopoldArkham/Molten"
documentation = "https://docs.rs/molten"
description = """
Molten is a lossless TOML parser that preserves all comments, indentations, 
whitespace and internal element ordering, and makes all of these fully 
editable via an easy API. It is written with the intent of replacing the 
current TOML parser used in cargo-edit, and, eventually, adding that
functionality to Cargo itself.
"""
categories = ["config", "encoding", "parser-implementations"]

# Set to true to enable publishing to crates.io
publish = false

[badges]
travis-ci = { repository = "LeopoldArkham/Molten" }
appveyor = { repository = "LeopoldArkham/Molten" }

[features]
nightly = ["criterion"]

[dependencies]
chrono = "0.3.0"
pretty_assertions = "0.4.0"
error-chain = "0.11.0"
criterion = { version = "0.1.0", optional = true }

